2010-05-18  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (Corpus, PCorpus): Use element names as IDs if
	provided by a source.

2010-04-09  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (.Source): Provide document names.

2010-04-07  Ingo Feinerer  <feinerer@logic.at>

	* R/meta.R (`content_or_meta`): Utility function.

2010-03-19  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readReut21578XML, readReut21578XMLasPlain): Extract
	TOPICS, LEWISSPLIT, CGISPLIT, and OLDID meta tags.

2010-03-03  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R (weightTfIdf): Added normalization option.

	* man/tm_tag_score.Rd: Add General Inquirer example for sentiment
	analysis.

2010-02-25  Ingo Feinerer  <feinerer@logic.at>

	* R/score.R (tm_tag_score): Compute a score from the number of
	tags matching in a document.

2010-02-18  Ingo Feinerer  <feinerer@logic.at>

	* R/complete.R (stemCompletion): New completion heuristics.

2010-02-17  Ingo Feinerer  <feinerer@logic.at>

	* R/plot.R (plot.TermDocumentMatrix): Memory improvements.

2010-02-06  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION (Depends): Depend on R (>= 2.10.0) to ensure that
	setOldClass(c(..., "list")) works.

2010-01-22  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (stemDocument.character): In case input is a
	simple character just delegate to the default Snowball stemmer.

2010-01-15  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readReut21578XML, readRCV1): Extract more meta
	data.

2010-01-12  Ingo Feinerer  <feinerer@logic.at>

	* R/doc.R (`Content<-`): Be careful with names attribute.

2010-01-07  Stefan Theussl  <stefan.theussl@wu.ac.at>

	* R/source.R (DirSource): Improved implementation especially when
	handling many (> 1M) files.

2009-12-22  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (getElem.URISource): Use encoding argument.

2009-12-11  Ingo Feinerer  <feinerer@logic.at>

	* R/doc.R (setOldClass): Register S3 document classes to be
	recognized by S4 methods.
