@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-3.9
-Date: 2010-05-28
+Version: 0.5-3.10
+Date: 2010-06-02
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.10.0), methods
