@@ -1,3 +1,8 @@
+2010-06-02  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/plot.R (Zipf_plot, Heaps_plot): Plotting functions for Zipf's
+	and Heaps' law.
+
 2010-05-18  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/corpus.R (Corpus, PCorpus): Use element names as IDs if
